@@ -1,8 +1,9 @@
 === 0.0.13 2010-12-08
 
-* 2 minor enhancements:
+* 3 minor enhancements:
   * Fixed f:substring and f:starts-with?
   * Added f:random(n) to return a random integer in (1,n)
+  * Fix escaping of single and double quotes in expressions
 
 === 0.0.12 2010-12-03
 
